prior to messing with S4 methods import

--- a/vignettes/bib.bib
+++ b/vignettes/bib.bib
@@ -15,3 +15,19 @@
   publisher={Taylor \& Francis}
 }
 
+@Book{mass,
+    title = {Modern Applied Statistics with S},
+    author = {W. N. Venables and B. D. Ripley},
+    publisher = {Springer},
+    edition = {Fourth},
+    address = {New York},
+    year = {2002},
+    note = {ISBN 0-387-95457-0},
+    url = {http://www.stats.ox.ac.uk/pub/MASS4},
+  }
+  
+@article{hh2002,
+title={Statistical methods in water resources: {US} {G}eological {S}urvey {T}echniques of {W}ater {R}esources {I}nvestigations, book 4, chap },
+author={Helsel, DR and Hirsch, RM},
+year={2002},
+}  
