--- a/vignettes/DataflowR.tex
+++ b/vignettes/DataflowR.tex
@@ -34,8 +34,10 @@
 \fancypagestyle{plain}{\fancyhf{}\fancyhead[R]{\includegraphics[width=6.0in,keepaspectratio=true]{sfwmd_bar8half_wordorexcel.png}}}
 
 \author{Joseph Stachelek}
-\title{Dataflow Output Standard Operating Procedure(SOP)}
- 
+\title{Dataflow Output Standard Operating Procedure (SOP)}
+
+%\VignetteIndexEntry{Dataflow Output Standard Operating Procedure(SOP)}
+
 \begin{document}
 \input{DataflowR-concordance}
 \maketitle
@@ -52,14 +54,22 @@ This SOP details a workflow and introduces an \texttt{R} package to clean, load,
   \item A spreadsheet program (MS Excel or similar)
   \item R (must have the \texttt{DataflowR} package and its dependencies installed) 
   \item RStudio (optional; for more easily accessing documentation)
-  \item ArcGIS (optional; alternatively use QGIS, Surfer, etc, for more easily adjusting final symbology)
+  \item QGIS (optional; alternatively use ArcGIS, Surfer, etc, for more easily adjusting final symbology)
 \end{itemize}
+ 
+\section{Installing the \texttt{DataflowR} package}
 
-\section{Installing \texttt{DataflowR}}
+The \texttt{R} package \texttt{DataflowR} is distributed via a \texttt{.tar.gz} (analagous to \texttt{.zip}) package archive file. This package contains the source code for package functions as well as the archived datasets for the SFWMD Florida Bay Dataflow Monitoring Program. In RStudio, it can be installed by navigating to \texttt{Tools} -> \texttt{Install Packages...} -> \texttt{Install from:} -> \texttt{Package Archive File}. Computers running the Windows operating system can only install binary \texttt{.zip} package archive files unless they have additional compiler software installed. The \texttt{DataflowR} binary package can be installed by running the following command from the \texttt{R} console:
 
-The \texttt{R} package \texttt{DataflowR} is distributed via a \texttt{.tar.gz} (analagous to \texttt{.zip}) package archive file. This package contains the source code for package functions as well as archived datasets for the SFWMD Florida Bay Dataflow Monitoring Program. In RStudio, it can be installed by navigating to \texttt{Tools} -> \texttt{Install Packages...} -> \texttt{Install from:} -> \texttt{Package Archive File}.\\ 
+\begin{Schunk}
+\begin{Sinput}
+> install.packages(path.to.zip,type="win.binary",repos=NULL)
+\end{Sinput}
+\end{Schunk}
 
-In most cases, \texttt{DataflowR} will be installed in the default user library in a folder named for your version of R. On Windows this is probably:\\ \texttt{C:/Users/}\verb|<your_username>|\texttt{/Documents/R/win-library/}\verb|<your_R_version>|\texttt{/DataflowR}.
+where \texttt{path.to.zip} is replaced by the file path of the \texttt{.zip} file. In most cases, \texttt{DataflowR} will be installed in the default user library in a folder named for your version of R. On Windows this is probably:\vspace{5pt}\\
+
+\texttt{C:/Users/}\verb|<your_username>|\texttt{/Documents/R/win-library/}\verb|<your_R_version>|\texttt{/DataflowR}.\\
 
 The directory should have the following file structure:
 
@@ -72,7 +82,7 @@ The directory should have the following file structure:
 .2 Meta.
 .2 R.
 }
-\newpage
+
 \subsection{Data}
 
 All data is stored under \texttt{extdata} in the following subdirectories:\\
@@ -88,7 +98,7 @@ All data is stored under \texttt{extdata} in the following subdirectories:\\
 }
 \vspace{15pt}
 \begin{warning}
-\textcolor{red}{IMPORTANT!!} before continuing, copy the contents of \texttt{extdata} to a local folder such as: \verb|C:\Documents\Data\Dataflow|.\\ Next, update the file \texttt{localpath} to point to the location of this new folder.
+\textcolor{red}{IMPORTANT!!} before continuing, copy the contents of \texttt{extdata} to a local folder such as: \verb|C:\Documents\Data\Dataflow|.\\ This will become your "working directory". Package functions will read and write to this directory without directly modifying archived datasets.\\ Next, update the first line of the file \texttt{localpath} to point to the location of this new folder.
 For example, the structure of \verb|C:\Documents\Data\Dataflow| would look like:
 
 \dirtree{%
@@ -109,25 +119,25 @@ Dataflow surveys in the archived data respository include the following:
 \begin{tabular}{l*{10} {c} r}
 \hline
 Year & 15 & 14 & 13 & 12 & 11 & 10 & 09 & 08 & 07 & 06\\ \hline
-J &  &  &  &  &  &  &  &  &  & \\
-F & x & x &  &  &  &  &  &  &  & \\
-M &  &  &  &  &  &  &  &  &  & \\
-A &  & x &  &  &  &  &  &  &  & \\
-M & x &  & x &  &  &  &  &  &  & \\
-J &  &  &  &  &  &  &  &  &  & \\
-J &  & x &  &  &  &  &  &  &  & \\
-A &  &  & x &  &  &  &  &  &  & \\
-S &  &  &  &  &  &  &  &  &  & \\
-O &  & x &  &  &  &  &  &  &  & \\
+J &  &  &  &  &  &  &  & x & x & \\
+F & x & x &  &  & x & x &  &  &  & \\
+M &  &  &  & x &  &  &  &  &  & \\
+A &  & x &  &  &  & x & x & x &  & \\
+M & x &  & x &  & x &  &  &  &  & x \\
+J &  &  &  & x & x &  & x &  &  & \\
+J &  & x &  &  &  & x &  &  & x & x \\
+A &  &  & x & x &  &  &  & x &  & \\
+S &  &  &  & x & x &  &  &  & x & x \\
+O &  & x &  &  &  &  & x &  &  & \\
 N &  &  & x &  &  &  &  &  &  & \\
-D &  &  &  & x &  &  &  &  &  & \\
+D &  &  &  & x &  &  &  & x &  & \\
 \hline
 \end{tabular}
 \end{center}
 
 
-\section{Cleaning, loading, interpolating, and plotting streaming data}
-\subsection{Clean incoming Dataflow and C6 files}
+\section{Handling streaming data}
+\subsection{Cleaning incoming Dataflow and C6 files}
 
 Incoming streaming data should be placed in \verb|DF_FullDataSets|\texttt{/Raw/InstrumentOutput} in a folder named for the survey date in yyyymm format (e.g. Feb-2015 is 201502). Likewise, Dataflow (\texttt{".txt"} or \texttt{".TXT"}) and C6 (\texttt{".csv"} or \texttt{".CSV"})  files should start with the survey date in yyyymmdd format. For example, the raw data files for February 2015 would be placed under:
 
@@ -149,7 +159,7 @@ When working in a non-Windows environment, \texttt{.csv} files created under Win
 \end{warning}
 
 \vspace{15pt}
-Cleaning is accomplished via the \nohyphens{\texttt{streamclean}} function. The example below shows how to specify inputs to clean the data for the February 2015 survey. For this example we set the \texttt{tofile} parameter to \texttt{FALSE} but setting it to \texttt{TRUE} will save the cleaned output to \verb|DF_FullDataSets| as a \texttt{.csv} file. The \texttt{streamclean} function will gather all the Dataflow records and merge them with the C6 data, remove leading and trailing records of all zeros, format GPS coordinates, check that conductivity to salinity calculations are correct (recalculate if neccesary), and classify records based on fathom and CERP basin designations.
+Cleaning is accomplished via the \nohyphens{\texttt{streamclean}} function. The example below shows how to specify inputs to clean the data for the February 2015 survey. For this example we set the \texttt{tofile} parameter to \texttt{FALSE} but setting it to \texttt{TRUE} will save the cleaned output to \verb|DF_FullDataSets| as a \texttt{.csv} file. The \texttt{streamclean} function will gather all the Dataflow records, merge them with the C6 data, remove leading and trailing records of all zeros, format GPS coordinates, check that conductivity to salinity calculations are correct (recalculate if neccesary), and classify records based on fathom and CERP basin designations. Variable names and column ordering are formatted consistently and a machine readable (POSIX) date-time stamp is created.   
 
 \begin{Schunk}
 \begin{Sinput}
@@ -158,7 +168,9 @@ Cleaning is accomplished via the \nohyphens{\texttt{streamclean}} function. The 
 \end{Schunk}
 \subsection{QA cleaned streaming data}
 
-The \texttt{streamclean} function does not perform detailed QA of individual parameter values or detect systematic bias. Systematic bias might occur because of sensor failure. In these cases there may be data but it is "junk data". The \texttt{streamqa} function creates a series of diagnostic plots of the data. The user enters an interactive QA "session" to detect systematic biases and eliminate unrealsitic data spikes.
+The \texttt{streamclean} function does not perform detailed QA of individual parameter values or detect systematic bias. Systematic bias might occur because of sensor drift or failure. In these cases there may be data but it is "junk data". The \texttt{streamqa} function creates a series of diagnostic plots of the data. The user enters an interactive QA "session" to detect systematic biases and eliminate unrealsitic data spikes. The first set of dialogs steps through each variable and gives the user the opportunity to define a valid data range (flagging values outside this range). Define a range higher (or lower) than all values to flag all records for that particular variable. The second set of dialogs compares parameters that are shared between the Dataflow and C6 instrumentation. The user is given the opportunity to flag the C6 or the Dataflow version of a shared parameter. 
+
+Cleaned data files are not modified directly. Instead, \texttt{streamqa} creates a matrix of the same size as the original data file and populates this matrix with flags. \texttt{streamqa} writes the output to the \verb|DF_FullDataSets| directory and names it as the date appended by "qa". Subsequent analyses can filter the full dataset based on these QA flags.
 
 \begin{Schunk}
 \begin{Sinput}
@@ -169,12 +181,11 @@ The \texttt{streamclean} function does not perform detailed QA of individual par
 
 \subsection{Loading previously cleaned streaming data}
 
-The \texttt{streamget} function will retrieve previously cleaned data. The function looks for full data sets in the \verb|DF_FullDataSets| folder that match the specified survey date. An example for the February 2015 survey is shown below.
-
+The \texttt{streamget} function will retrieve previously cleaned data. The function looks for full data sets in the \verb|DF_FullDataSets| folder that match the specified survey date. The optional parameter \texttt{qa} can be set to TRUE in order for \texttt{streamget} to filter the dataset by corresponding \texttt{streamqa} output. An example for the February 2015 survey is shown below.
 
 \begin{Schunk}
 \begin{Sinput}
-> dt<-streamget(yearmon=201502)
+> dt<-streamget(yearmon=201502,qa=TRUE)
 \end{Sinput}
 \end{Schunk}
 
@@ -194,7 +205,7 @@ More details regarding the interpolation procedure can be found in \cite{stachel
 
 \subsection{Plotting interpolated surfaces}
 
-A quick visual inspection of interpolated outputs can be accomplished using the \texttt{surfplot} function. The \texttt{rnge} paramter takes either a single survey date or a list of two survey dates to specify a date range for plotting. More detailed publication quality maps should be produced using a dedicated GIS program such as ArcGIS or QGIS.
+A quick visual inspection of interpolated outputs can be accomplished using the \nohyphens{\texttt{surfplot}} function. The \texttt{rnge} parameter takes either a single survey date or a list of two survey dates to specify a date range for plotting. More detailed publication quality maps should be produced using a dedicated GIS program such as ArcGIS or QGIS.
 
 \begin{Schunk}
 \begin{Sinput}
@@ -210,9 +221,11 @@ A quick visual inspection of interpolated outputs can be accomplished using the 
 \end{figure}
 %\FloatBarrier
 
+\subsubsection{Producing timeseries for specific basins}
+
 \section{Handling discrete grab sample data}
 \subsection{Cleaning grab sample records}
-Incoming grab sample \texttt{.csv} data files should be placed in the \verb|DF_GrabSamples/Raw| folder and their file names should have the survey date in yyyymm format preappended. These files can be cleaned using the \texttt{grabclean} function. The \texttt{grabclean} function formats column names, removes columns/rows of missing data, and calculates minute averages of the streaming data that correspond to the grab sample date/times. Output is saved to the \verb|DF_GrabSamples| folder when \texttt{tofile} is set to \texttt{TRUE}. Suspect data records should be identified manually in the \texttt{flags} column. In this version of the SOP, there is only one flag \texttt{s}. This becomes important in Section 6.2 because suspect data records can create problems converting between extracted and fluoresced chlorophyll.
+Incoming grab sample \texttt{.csv} data files should be placed in the \verb|DF_GrabSamples/Raw| folder and their file names should have the survey date in yyyymm format preappended. These files can be cleaned using the \texttt{grabclean} function. The \texttt{grabclean} function formats column names, removes columns/rows of missing data, and calculates minute averages of the streaming data that correspond to the grab sample date/times. Output is saved to the \verb|DF_GrabSamples| folder when \texttt{tofile} is set to \texttt{TRUE}. Suspect data records should be identified manually in the \texttt{flags} column. This becomes important in Section 6.2 because suspect data records can create problems converting between extracted and fluoresced chlorophyll.
 
 \begin{Schunk}
 \begin{Sinput}
@@ -232,7 +245,7 @@ The \texttt{rnge} paramter takes either a single survey date or a list of two su
 
 \subsection{Plotting grab sample data}
 
-Several plot types are defined in the \texttt{grabplot} function including "permit-style" vertical bar plots ("permitbarplot"), and. \texttt{grabplot} calls \texttt{grabget} internally.
+Several plot types are defined in the \texttt{grabplot} function including "permit-style" vertical bar plots ("permitbarplot"), and.
 
 \begin{Schunk}
 \begin{Sinput}
@@ -252,7 +265,7 @@ Several plot types are defined in the \texttt{grabplot} function including "perm
 
 \section{Data Analysis}
 \subsection{Calculating a difference-from-average surface}
-The \texttt{avmap} function takes a survey date as input and searches the \verb|DF_Surfaces| folder for interpolated surfaces of the same parameter within a specified number of months for each year. The number of months (tolerance) on either side of the input month is set using the \texttt{tolerance} parameter. The found surfaces often have different extents. The \texttt{percentcov} parameter controls the percent of all identified surveys required before a pixel is included in difference-from-average computations. Output surfaces are written to the current working directory unless the \texttt{tofile} parameter is set to \texttt{FALSE}.
+The \texttt{avmap} function takes a survey date as input and searches the \verb|DF_Surfaces| folder for interpolated surfaces of the same parameter within a specified number of months for each year. The number of months on either side of the input month is set using the \texttt{tolerance} parameter. The found surfaces often have different extents. The \texttt{percentcov} parameter controls the percent of all identified surveys required before a pixel is included in difference-from-average computations. Output surfaces are written to the current working directory unless the \texttt{tofile} parameter is set to \texttt{FALSE}.
 
 \begin{Schunk}
 \begin{Sinput}
@@ -271,11 +284,9 @@ The \texttt{avmap} function takes a survey date as input and searches the \verb|
 \subsection{Fit grab sample and streaming averages}
 \subsubsection{Calculate coefficients}
 
-In order to generate maps of chlorophyll concentration, streaming fluorescence values (chlorophyll, algal pigments, cdom) must be statistically "fit" (regressed) against lab-derived extracted chlorophyll values. The \texttt{chlcoef} function searches the \verb|DF_GrabSamples| folder for a cleaned grab dataset that matches the specified \texttt{yearmon} parameter value. First, the function generates a correlation matrix and identifies streaming variables that have at least a 0.4 correlation with extracted chlorophyll. The resulting variables are entered into a linear regression. If the R-squared value of the regression is less than 0.7, the variables are entered into a second degree polynomial regression. The regression (either the linear or the second degree polynomial) is subjected to a backward stepwise AIC model selection. The output of this step is usually a regression with a reduced number of parameters (citeMASS). The final regression is checked for multicolinearity by calculating variance inflation factors (Helsel and Hirsh 2002).
+In order to generate maps of chlorophyll concentration, streaming fluorescence values (chlorophyll, algal pigments, cdom) must be statistically "fit" (regressed) against lab-derived extracted chlorophyll values. The \texttt{chlcoef} function searches the \verb|DF_GrabSamples| folder for a cleaned grab dataset that matches the specified \texttt{yearmon} parameter value. First, the function generates a correlation matrix and identifies streaming variables that have at least a 0.4 correlation with extracted chlorophyll. The resulting variables are entered into a linear regression. If the R\textsuperscript{2} value of the regression is less than 0.7, the variables are entered into a second degree polynomial regression. The regression (either the linear or the second degree polynomial) is subjected to a backward stepwise AIC model selection \citep{mass}. The output of this step is usually a regression with a reduced number of parameters. The final regression is checked for multicolinearity by calculating variance inflation factors (vif) and excluding parameters until all vif values are less than 10 \citep{hh2002}. The previous steps, which include summaries of all intermediate model fits, are printed to the R console for inspection. 
 
-
-
-
+The final set of variable coefficients, the R\textsuperscript{2} value, the p-value, and the formula for the final fitted equation are printed (appended) to the \texttt{extractChlcoef.csv} file in the \verb|DF_GrabSamples| folder.
 
 \begin{Schunk}
 \begin{Sinput}
@@ -283,8 +294,17 @@ In order to generate maps of chlorophyll concentration, streaming fluorescence v
 \end{Sinput}
 \end{Schunk}
 
-\subsubsection{Generate corrected surfaces}
+\subsubsection{Generate extracted chlorophyll surfaces}
 
+The coefficients calculated as a result of the \texttt{chlcoef} function. 
+
+\texttt{chlmap} function takes a 
+
+\begin{Schunk}
+\begin{Sinput}
+> chlmap(yearmon=201502)
+\end{Sinput}
+\end{Schunk}
 
 
 \medskip
