add grassmap colorramp dependencies, log-scaling option

--- a/vignettes/DataflowR.tex
+++ b/vignettes/DataflowR.tex
@@ -179,7 +179,7 @@ Some older Dataflow surveys have undergone a "hand-cleaning" and are missing the
 
 \begin{Schunk}
 \begin{Sinput}
-> dt<-streamparse(yearmon=201007,tofile=TRUE)
+> dt<-streamparse(yearmon=201007,tofile=FALSE)
 \end{Sinput}
 \end{Schunk}
 
