--- a/vignettes/DataflowR.Rnw
+++ b/vignettes/DataflowR.Rnw
@@ -143,9 +143,9 @@ Some portions of \nameref{sec:plottingsurf} (Section 4.5) requires dedicated GIS
 \end{warning}
 
 \section{Handling streaming data}
-\subsection{Cleaning incoming Dataflow and C6 files}
+\subsection{Cleaning incoming streaming data files}
 
-Incoming streaming data should be placed in \verb|DF_FullDataSets|\texttt{/Raw/InstrumentOutput} in a folder named for the survey date in yyyymm format (e.g. Feb-2015 is 201502). Likewise, Dataflow (\texttt{".txt"} or \texttt{".TXT"}) and C6 (\texttt{".csv"} or \texttt{".CSV"})  files should start with the survey date in yyyymmdd format. For example, the raw data files for February 2015 would be placed under:
+Incoming streaming data should be placed in \verb|DF_FullDataSets|\texttt{/Raw/InstrumentOutput} in a folder named for the survey date in yyyymm format (e.g. Feb-2015 is 201502). Likewise, Dataflow (\texttt{".txt"} or \texttt{".TXT"}), C6 (\texttt{".csv"} or \texttt{".CSV"}), Exo, and Eureka  files should start with the survey date in yyyymmdd format. For example, the raw data files for February 2015 would be placed under:
 
 
 \dirtree{%
@@ -156,8 +156,9 @@ Incoming streaming data should be placed in \verb|DF_FullDataSets|\texttt{/Raw/I
 .5 InstrumentOutput.
 .6 201502.
 .7 20150211\_DF021115.txt.
-.7 ....
 .7 20150211\_C6\_11FEB.csv.
+.7 20150211\_11FEB\_eu.csv.
+.7 20150211\_11FEB\_exo.csv.
 .7 ....
 }
 \begin{warning}
@@ -168,8 +169,16 @@ When working in a non-Windows environment, \texttt{.csv} files created under Win
 Cleaning is accomplished via the \nohyphens{\texttt{streamclean}} function. The example below shows how to specify inputs to clean the data for the February 2015 survey. For this example we set the \texttt{tofile} parameter to \texttt{FALSE} but setting it to \texttt{TRUE} will save the cleaned output to \verb|DF_FullDataSets| as a \texttt{.csv} file. The \texttt{streamclean} function will gather all the Dataflow records, merge them with the C6 data, remove leading and trailing records of all zeros, format GPS coordinates, check that conductivity to salinity calculations are correct (recalculate if neccesary), and classify records based on fathom and CERP basin designations. Variable names and column ordering are formatted consistently and a machine readable (POSIX) date-time stamp is created.   
 
 <<eval=FALSE>>=
-dt <- streamclean(yearmon = 201502, mmin = 7, c6pres = TRUE, tofile = FALSE,
-                  sep = ",")
+dt <- streamclean(yearmon = 201502, mmin = 7, c6pres = TRUE,
+                  tofile = FALSE, sep = ",")
+@
+
+If the survey includes Eureka (Manata) or Exo output, this can be included by setting \texttt{eupres} and(or) \texttt{exopres} to \texttt{TRUE} as in the following example:
+
+<<eval=FALSE>>=
+dt <- streamclean(yearmon = 201513, mmin = 7, c6pres = TRUE,
+                  c6mmin = 12, tofile = FALSE, exommin = 60,
+                  exopres = TRUE, eupres = TRUE, eummin = 12)
 @
 
 Some older Dataflow surveys have undergone a "hand-cleaning" and are missing the raw inputs neccessary to run \texttt{streamclean}. In these instances, the \texttt{streamparse} function can be used to align the formatting of these files to resemble the output of \texttt{streamclean}. Specifically, the function creates a POSIX compliant date field, and reproduces the column names and ordering of a \texttt{streamclean} output. 
