add man details to grassmap, fix surfplot basemap

--- a/vignettes/DataflowR.tex
+++ b/vignettes/DataflowR.tex
@@ -172,8 +172,8 @@ Cleaning is accomplished via the \nohyphens{\texttt{streamclean}} function. The 
 
 \begin{Schunk}
 \begin{Sinput}
-> dt <- streamclean(yearmon = 201502, mmin = 7, c6pres = TRUE, tofile = FALSE,
-+                   sep = ",")
+> dt <- streamclean(yearmon = 201502, mmin = 7, c6pres = TRUE,
++                   tofile = FALSE, sep = ",")
 \end{Sinput}
 \end{Schunk}
 
