--- a/vignettes/DataflowR.tex
+++ b/vignettes/DataflowR.tex
@@ -34,7 +34,7 @@
 \fancypagestyle{plain}{\fancyhf{}\fancyhead[R]{\includegraphics[width=6.0in,keepaspectratio=true]{sfwmd_bar8half_wordorexcel.png}}}
 
 \author{Joseph Stachelek}
-\title{Dataflow Output Standard Operating Procedure (SOP)}
+\title{The DataflowR Package for Processing Underway Water Quality Surveys}
 
 %\VignetteIndexEntry{Dataflow Output Standard Operating Procedure(SOP)}
 
@@ -47,63 +47,54 @@
 %\newpage
 \section{Introduction}
 
-This SOP details a workflow and introduces an \texttt{R} package to clean, load, interpolate, and plot streaming Dataflow output and associated discrete grab samples. The steps neccessary to perform a number of more involved data analyses are also included.
+The \texttt{DataflowR} package is an integrated set of processing functions to process underway water quality data. These functions provide the ability to perform quality assurance checks, exploratory analysis, spatial interpolation, and data management operations. Functions to handle associated discrete grab samples are also included.
 
-\section{Programs and Applications used in this SOP}
+\section{Programs and Applications}
 
 \begin{itemize}
-  \item A spreadsheet program (MS Excel or similar)
-  \item R (must have the \texttt{DataflowR} package and its dependencies installed) 
+  \item R (required; must have the \texttt{DataflowR} package and its dependencies installed) 
   \item RStudio (optional; for more easily accessing documentation)
   \item GRASS (optional; alternatively use QGIS, ArcGIS, Surfer, etc, for more easily adjusting final symbology)
 \end{itemize}
  
 \section{Installing the \texttt{DataflowR} package}
 
-The \texttt{R} package \texttt{DataflowR} is distributed via a \texttt{.tar.gz} (analagous to \texttt{.zip}) package archive file. This package contains the source code for package functions as well as the archived datasets for the SFWMD Florida Bay Dataflow Monitoring Program. In RStudio, it can be installed by navigating to \texttt{Tools} -> \texttt{Install Packages...} -> \texttt{Install from:} -> \texttt{Package Archive File}. Computers running the Windows operating system can only install binary \texttt{.zip} package archive files unless they have additional compiler software installed. The \texttt{DataflowR} binary package can be installed by running the following command from the \texttt{R} console:
+\subsubsection{Pre-built Installation}
+The \texttt{R} package \texttt{DataflowR} is distributed via a \texttt{.tar.gz} (analagous to \texttt{.zip}) package archive file. This package contains the source code for package functions as well as the archived datasets for the SFWMD Florida Bay Dataflow Monitoring Program. In RStudio, it can be installed by navigating to \texttt{Tools} -> \texttt{Install Packages...} -> \texttt{Install from:} -> \texttt{Package Archive File}. Computers running the Windows operating system can only install binary \texttt{.zip} package archive files unless they have additional compiler software installed (RTools). The \texttt{DataflowR} binary package can be installed by running the following command from the \texttt{R} console:
 
 \begin{Schunk}
 \begin{Sinput}
-> install.packages(path.to.zip, type = "win.binary", repos = NULL, dependencies = TRUE)
+> install.packages(path.to.zip, type = "win.binary", repos = NULL,
++                  dependencies = TRUE)
 \end{Sinput}
 \end{Schunk}
 
-where \texttt{path.to.zip} is replaced by the file path of the \texttt{.zip} file. In most cases, \texttt{DataflowR} will be installed in the default user library in a folder named for your version of R. On Windows this is probably:\vspace{5pt}\\
+where \texttt{path.to.zip} is replaced by the file path of the \texttt{.zip} file.
 
-\texttt{C:/Users/}\verb|<your_username>|\texttt{/Documents/R/win-library/}\verb|<your_R_version>|\texttt{/DataflowR}.\\
+\subsubsection{Source Installation}
 
-The directory should have the following file structure:
+The \texttt{DataflowR} package can also be built directly from source code if no pre-built \texttt{.tar.gz} (\texttt{.zip}) package is available. This can be accomplished by installing the \texttt{devtools} package and running the following set of commands:
 
-\dirtree{%
-.1 /.
-.2 doc.
-.2 extdata.
-.2 help.
-.2 html.
-.2 Meta.
-.2 R.
-}
+\begin{Schunk}
+\begin{Sinput}
+> install.packages("devtools")
+> devtools::install_git("https://gitlab.com/jsta/DataflowR.git",
++   credentials = git2r::cred_user_pass("<username>", getPass::getPass()))
+\end{Sinput}
+\end{Schunk}
 
-\subsection{Data}
+where \texttt{<username>} and \texttt{<password>} are replaced with your GitLab username and password. On Windows machines, the \texttt{RTools} program is required for source installation.
 
-All data is stored under \texttt{extdata} in the following subdirectories:\\
+\subsection{Data Archive}
 
-\dirtree{%
-.1 /.
-.2 extdata.
-.3 DF\_BaseFile.
-.3 DF\_FullDataSets.
-.3 DF\_Subsets.
-.3 DF\_Surfaces.
-.3 DF\_Validation.
-}
+Archived Dataflow output is distributed seperately from the \texttt{DataflowR} package as a compressed file directory. 
+
 \vspace{15pt}
 \begin{warning}
-\textcolor{red}{IMPORTANT!!} before continuing, copy the contents of \texttt{extdata} to a local folder such as: \verb|C:\Documents\Data\Dataflow|.\\ This will become your "working directory". Package functions will read and write to this directory without directly modifying archived datasets.\\ Next, update the first line of the file \texttt{localpath} to point to the location of this new folder.
+\textcolor{red}{IMPORTANT!!} before continuing, copy the contents of the Dataflow archive to a local folder such as: \verb|C:\Documents\Data\Dataflow|.\\ This will become your "working directory". Package functions will read and write to this directory without directly modifying archived datasets.\\ 
 For example, the structure of \verb|C:\Documents\Data\Dataflow| would look like:
-
+\\
 \dirtree{%
-.1 /.
 .2 Dataflow.
 .3 DF\_BaseFile.
 .3 DF\_FullDataSets.
@@ -112,42 +103,33 @@ For example, the structure of \verb|C:\Documents\Data\Dataflow| would look like:
 .3 DF\_Validation.
 }
 
+Next, load the \texttt{DataflowR} package to discover the location of the \texttt{localpath} file. Alternatively, you can discover the path to the file by running the following command:
+
+\begin{Schunk}
+\begin{Sinput}
+> system.file("localpath", package = "DataflowR")
+\end{Sinput}
+\end{Schunk}
+
+
+Update the first line of the \texttt{localpath} file to point to the location of your local copy of the Data Archive folder. End the file with a blank line. Note that if you are on a Windows machine you need to have double slashes in the text of the path: \\  
+\\
+\verb|C:\\Documents\\Data\\Dataflow|
+
 \end{warning}
-
-Dataflow surveys in the archived data respository include the following:
-
-\begin{center}
-\begin{tabular}{l*{10} {c} r}
-\hline
-Year & 15 & 14 & 13 & 12 & 11 & 10 & 09 & 08 & 07 & 06\\ \hline
-J &  &  &  &  &  &  &  & x & x & \\
-F & x & x &  &  & x & x &  &  &  & \\
-M &  &  &  & x &  &  &  &  &  & \\
-A &  & x &  &  &  & x & x & x &  & \\
-M & x &  & x &  & x &  &  &  &  & x \\
-J &  &  &  & x & x &  & x &  &  & \\
-J & x & x &  &  &  & x &  &  & x & x \\
-A &  &  & x & x &  &  &  & x &  & \\
-S & x &  &  & x & x &  &  &  & x & x \\
-O &  & x &  &  &  &  & x &  &  & \\
-N &  &  & x &  &  &  &  &  &  & \\
-D & x &  &  & x &  &  &  & x &  & \\
-\hline
-\end{tabular}
-\end{center}
 
 \subsection{GIS Software}
 Some portions of \nameref{sec:plottingsurf} (Section 4.5) requires dedicated GIS software such as QGIS, ArcGIS, or GRASS GIS. In the interest of creating a fully reproducible and streamlined workflow for plotting Dataflow output some functions (\texttt{grassmap}) requires GRASS GIS (GRASS). GRASS can be installed by navigating to \href{http://grass.osgeo.org}{http://grass.osgeo.org}.
 
 \vspace{15pt}
 \begin{warning}
-\texttt{DataflowR} assumes that the user is on a Linux machine and that GRASS is installed under \texttt{/usr/lib/grass70}. For more details see \citet{rgrass7}.
+The \texttt{grassmap} function assumes that the user is on a Linux machine and that GRASS is installed under \texttt{/usr/lib/grass70}. For more details see \citet{rgrass7}.
 \end{warning}
 
 \section{Handling streaming data}
 \subsection{Cleaning incoming streaming data files}
 
-Incoming streaming data should be placed in \verb|DF_FullDataSets|\texttt{/Raw/InstrumentOutput} in a folder named for the survey date in yyyymm format (e.g. Feb-2015 is 201502). Likewise, Dataflow (\texttt{".txt"} or \texttt{".TXT"}), C6 (\texttt{".csv"} or \texttt{".CSV"}), Exo, and Eureka  files should start with the survey date in yyyymmdd format. For example, the raw data files for February 2015 would be placed under:
+Incoming streaming data should be placed in your working directory under \\ \verb|DF_FullDataSets|\texttt{/Raw/InstrumentOutput} in a folder named for the survey date in yyyymm format (e.g. Feb-2015 is 201502). Likewise, data files (DF, C6, Eureka/Manta, Exo) in \texttt{".csv"} format should by preappended with the survey date in yyyymmdd format. Also, data files should be appended with the two letter code corresponding to its respective instrument (see below). For example, the raw data files for February 2015 would be named as follows and placed in the following directory stucture:
 
 
 \dirtree{%
@@ -157,8 +139,8 @@ Incoming streaming data should be placed in \verb|DF_FullDataSets|\texttt{/Raw/I
 .4 Raw.
 .5 InstrumentOutput.
 .6 201502.
-.7 20150211\_DF021115.txt.
-.7 20150211\_C6\_11FEB.csv.
+.7 20150211\_DF021115\_DF.csv.
+.7 20150211\_C6\_11FEB\_C6.csv.
 .7 20150211\_11FEB\_eu.csv.
 .7 20150211\_11FEB\_exo.csv.
 .7 ....
@@ -168,22 +150,14 @@ When working in a non-Windows environment, \texttt{.csv} files created under Win
 \end{warning}
 
 \vspace{15pt}
-Cleaning is accomplished via the \nohyphens{\texttt{streamclean}} function. The example below shows how to specify inputs to clean the data for the February 2015 survey. For this example we set the \texttt{tofile} parameter to \texttt{FALSE} but setting it to \texttt{TRUE} will save the cleaned output to \verb|DF_FullDataSets| as a \texttt{.csv} file. The \texttt{streamclean} function will gather all the Dataflow records, merge them with the C6 data, remove leading and trailing records of all zeros, format GPS coordinates, check that conductivity to salinity calculations are correct (recalculate if neccesary), and classify records based on fathom and CERP basin designations. Variable names and column ordering are formatted consistently and a machine readable (POSIX) date-time stamp is created.   
+Cleaning is accomplished via the \nohyphens{\texttt{streamclean}} function. The example below shows how to specify inputs to clean the data for the June 2016 survey. First, assign the \texttt{yearmon} argument to \texttt{201606}. Next, designate which intrument will be the primary source for gps measurements. In this case, we need to set \texttt{gps} to \textit{eu}. Specify the expected number of measurements per minute for each intrument using the respective \texttt{mmin} argument. For this example we set the \texttt{tofile} parameter to \texttt{FALSE} but setting it to \texttt{TRUE} will save the cleaned output to \verb|DF_FullDataSets| as a \texttt{.csv} file. 
+
+The \texttt{streamclean} function will gather all the records associated with the remaining streams, merge them with the \texttt{gps} target, remove leading and trailing records of all zeros, format GPS coordinates, check that conductivity to salinity calculations are correct (recalculate if neccesary), and classify records based on fathom and CERP basin designations. Variable names and column ordering are formatted consistently and a machine readable (POSIX) date-time stamp is created.   
 
 \begin{Schunk}
 \begin{Sinput}
-> dt <- streamclean(yearmon = 201502, mmin = 7, c6pres = TRUE,
-+                   tofile = FALSE, sep = ",")
-\end{Sinput}
-\end{Schunk}
-
-If the survey includes Eureka (Manata) or Exo output, this can be included by setting \texttt{eupres} and(or) \texttt{exopres} to \texttt{TRUE} as in the following example:
-
-\begin{Schunk}
-\begin{Sinput}
-> dt <- streamclean(yearmon = 201513, mmin = 7, c6pres = TRUE,
-+                   c6mmin = 12, tofile = FALSE, exommin = 60,
-+                   exopres = TRUE, eupres = TRUE, eummin = 12)
+> dt <- streamclean(yearmon = 201606, gps = "eu", eummin = 12, c6mmin = 12,
++       tofile = FALSE)
 \end{Sinput}
 \end{Schunk}
 
@@ -198,13 +172,13 @@ Some older Dataflow surveys have undergone a "hand-cleaning" and are missing the
 
 \subsection{QA cleaned streaming data}
 
-The \texttt{streamclean} function does not perform detailed QA of individual parameter values or detect systematic bias. Systematic bias might occur because of sensor drift or failure. In these cases there may be data but it is "junk data". The \texttt{streamqa} function creates a series of diagnostic plots of the data. The user enters an interactive QA "session" to detect systematic biases and eliminate unrealsitic data spikes. The first set of dialogs steps through each variable and gives the user the opportunity to define a valid data range (flagging values outside this range). Define a range higher (or lower) than all values to flag all records for that particular variable. The second set of dialogs compares parameters that are shared between the Dataflow and C6 instrumentation. The user is given the opportunity to flag the C6 or the Dataflow version of a shared parameter. 
+The \texttt{streamclean} function does not perform detailed QA of individual parameter values or detect systematic bias. Systematic bias might occur because of sensor drift or failure. In these cases there may be data but it is "junk data". The \texttt{streamqa} function creates a series of diagnostic plots of the data. The user enters an interactive QA "session" to detect systematic biases and eliminate unrealsitic data spikes. The set of dialogs steps through each variable named in the \texttt{parset} argument and gives the user the opportunity to define a valid data range (flagging values outside this range). Define a range higher (or lower) than all values to flag all records for that particular variable.\\
 
 Cleaned data files are not modified directly. Instead, \texttt{streamqa} creates a matrix of the same size as the original data file and populates this matrix with flags. \texttt{streamqa} writes the "qafile" output to the \verb|DF_FullDataSets/QA| directory and names it as the date appended by "qa". Subsequent analyses can filter the full dataset based on these QA flags.
 
 \begin{Schunk}
 \begin{Sinput}
-> streamqa(yearmon = 201502)
+> streamqa(yearmon = 201606, parset = names(streamget(201606))[c(4:12, 16:22)])
 \end{Sinput}
 \end{Schunk}
 
@@ -216,13 +190,13 @@ The \texttt{streamget} function will retrieve previously cleaned data. The funct
 
 \begin{Schunk}
 \begin{Sinput}
-> dt <- streamget(yearmon = 201502, qa = TRUE)
+> dt <- streamget(yearmon = 201606, qa = TRUE)
 \end{Sinput}
 \end{Schunk}
 
 \subsection{Interpolating cleaned data files}
 
-The \texttt{streaminterp} function will interpolate a dataset that has been loaded into memory from the \texttt{streamclean} or \texttt{streamget} functions. Interpolations are performed using functions in the \texttt{ipdw} \texttt{R} package \citep{ipdw}. Variables to be interpolated must be specified as inputs to the \texttt{paramlist} paramter. If you have loaded your dataset to memory under the name \texttt{dt}, use \texttt{names(dt)} to see the available parameters. Enter one or more parameters as arguments to a character list. For example, to interpolate salinity only (as below) use \texttt{c("sal")}. Additional parameters can be appended. For example, to interpolate salinity and temperature use \texttt{c("sal","temp")}. Interpolation should take about 20 minutes plus about 2 minutes for each entry in \texttt{paramlist}. Raster surface output will be written to a subfolder of \verb|DF_Surfaces| named for the year and month of the survey in question.\\
+The \texttt{streaminterp} function will interpolate a dataset that has been loaded into memory from the \texttt{streamclean} or \texttt{streamget} functions. Interpolations are performed using functions in the \texttt{ipdw} \texttt{R} package \citep{ipdw}. Variables to be interpolated must be specified as inputs to the \texttt{paramlist} paramter. If you have loaded your dataset to memory under the name \texttt{dt}, use \texttt{names(dt)} to see the available parameters. Enter one or more parameters as arguments to a character vector. For example, to interpolate salinity only (as below) use \texttt{c("sal")}. Additional parameters can be appended. For example, to interpolate salinity and temperature use \texttt{c("sal","temp")}. Interpolation should take about 20 minutes plus about 2 minutes for each entry in \texttt{paramlist}. Raster surface output will be written to a subfolder of \verb|DF_Surfaces| named for the appropriate year and month of the survey.\\
 
 \texttt{streaminterp} will first attempt to split the full data set into training and validation datasets. If these already exist in the \verb|DF_Subsets| and \verb|DF_Validation| folders, a warning will be printed and the pre-existing datsets will be used. Next, \texttt{streaminterp} will attempt to create a dedicated folder under \verb|DF_Surfaces| to hold all the interpolated surfaces for the given survey. If this folder already exists, \texttt{streaminterp} will print a warning but the function should proceed as normal (the warning can be disregarded).\\
 
@@ -230,7 +204,8 @@ More details regarding the interpolation procedure can be found in \cite{stachel
 
 \begin{Schunk}
 \begin{Sinput}
-> streaminterp(dt, paramlist = c("sal"), yearmon)
+> streaminterp(streamget(yearmon = 201606, qa = TRUE),
++   paramlist = c("salinity.pss"), 201606)
 \end{Sinput}
 \end{Schunk}
 
